--- a/src/styles/components/_banner.scss
+++ b/src/styles/components/_banner.scss
@@ -1,17 +1,26 @@
 
 #home {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 
 .home_text{
     padding: 16%;
     color: white;
+    
     h1 {
-        font-size: 5rem;
+        font-size: 4rem;
         margin: 0px;
         span{
             color:  $primary;
+        }
+    }
+}
+
+@media(max-width:1228px){
+    .home_text{ 
+        h1{
+            font-size: 3rem;
         }
     }
 }
