--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -9,7 +9,7 @@
 }
 
 .contact__title {
-    font-size: 50px;
+    font-size: 40px;
     span {
         color: $primary;
     }
@@ -22,8 +22,8 @@
 }
 
 .contact__card {
-    width: 400px;
-    height: 150px;
+    width: 300px;
+    height: 100px;
     box-shadow:  0 4px 8px 0 rgba(0,0,0,0.2);
     border-radius: 30px;
     transition: .3s;
@@ -40,6 +40,36 @@
 }
 
 .contact__card img{
-    height: 100px;
-    width: 100px;
+    height: 50px;
+    width: 50px;
+}
+
+@media (max-width: 1228px){
+
+    .contact__title {
+        text-align: center;
+    }
+
+    .contact__cards{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    
+    .contact__card {
+        width: 300px;
+        height: 100px;
+        transition: .3s;
+        padding: 15px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        margin: 20px;
+
+        &:hover {
+            box-shadow: -4px -4px 7px #ffffff50, 3px 3px 5px rgba(94, 104, 121, .288);
+        }
+    }
 }
