deploying in Netlify

--- a/src/styles/components/_banner.scss
+++ b/src/styles/components/_banner.scss
@@ -24,3 +24,15 @@
         }
     }
 }
+
+
+@media (max-width: 360px){
+    .home_text{ 
+        h1{
+            font-size: 2.4rem;
+            &:first-child{
+                margin-top: 100px;
+            }
+        }
+    }
+}
