--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -1,6 +1,6 @@
 
 #contact{
-    min-height: 400px;
+    height: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -45,6 +45,10 @@
 }
 
 @media (max-width: 1228px){
+    #contact{
+        height: auto;
+        padding: 0px;
+    }
 
     .contact__title {
         text-align: center;
@@ -66,10 +70,32 @@
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
-        margin: 20px;
+        margin: 20px auto;
 
-        &:hover {
-            box-shadow: -4px -4px 7px #ffffff50, 3px 3px 5px rgba(94, 104, 121, .288);
+    }
+}
+
+@media (max-width: 400px){
+        
+    .contact__card {
+        width: 200px;
+        height: 70px;
+        transition: .3s;
+        padding: 15px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        margin: 20px auto;
+
+        p{
+            font-size: 12px;
         }
+
+    }
+
+    .contact__card img{
+        height: 30px;
+        width: 30px;
     }
 }
