--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -55,3 +55,18 @@
 }
 
 }
+
+@media(max-width: 1000px){
+    .about__container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (max-width: 360px){
+    
+    .about__title {
+        text-align: center;
+    }
+}
