fixed padding in margin

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -74,6 +74,7 @@ ul {
             
             left: 0;
             position: fixed;
+            padding: 0;
             top: 80px;
             margin: 0;
             height: 100%;
